solar + font in atherm

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				      </div>
 				    </a>
 
-				    <a class="blog-link type-image-2-1 row1 col1 first" href="aquarelle.html">
+				    <a class="blog-link type-image-2-1 row1 col1 first" href="solarpanel.html">
 				      <div class="article-image solar" background-color: #eee; "></div>
 				      <h3>Solar Panel</h3>
 				      <p>Research for Municipal Corporation of Delhi</p>
