--- a/impulse.html
+++ b/impulse.html
@@ -26,13 +26,13 @@
 
 						
 						<h3>
-							<a href="index.html" style="border: none;">MINET</a>
+							<a href="index.html" style="border: none;">Impulse</a>
 						</h3>
 
 					</div>
 
 				<div class = "six columns right">
-					Technology Club of MIS
+					Physics Club of MIS
 				</div>
 			</div>
 		</div>
@@ -43,13 +43,23 @@
 		<div class="container">
 			<div class="twelve columns">
 
-				<img src="img/minetsite.png" style="width: 100%; height: auto">
 
-				<p>Founded in 1999, MINET (MIS Information Network) is the official technology club of The Mother's International School.</p>
+				<h2> Enigma – Online Hunt </h2>
+				<img src="img/login.png" style="width: 100%; height: auto">
+				<img src="img/play.png" style="width: 100%; height: auto">
 
-				<p>As the President of this club, I am in charge of the club's main functionality – including participating in tech symposiums, making web applications, and organizing our annual event, MINET X. </p>
+				<p>As the Member and Technical Head of my school's Physics Club, I organized its annual event, <b>Infinity</b>, for 4 consecutive years.</p>
 
-				<p>X is an exclusive invite-only event, and invites are extended to a select number of the very best schools in New Delhi, based on significant achievements in the previous years. Visit <a href="https://minet.co">minet.co</a> for more details.</p>
+				<p>Infinity is an annual intra-school event comprising of four sub-events that are organized for Classes 9 to 12.</p>
+
+				<ul style="margin-left: 15px;">
+					<li>Quiz</li>
+					<li>Theory & Experimentation</li>
+					<li>Fermi – Test of Approximation</li>
+					<li>Enigma – Online Physics Hunt</li>
+				</ul>
+
+				<p>Besides organizing these events, I also created the website <a href="http://teamimpulse.club" target="_blank">teamimpulse.club</a>.</p>
 			</div>
 		</div>
 
