--- a/navchetna.html
+++ b/navchetna.html
@@ -26,13 +26,13 @@
 
 						
 						<h3>
-							<a href="index.html" style="border: none;">MINET</a>
+							<a href="index.html" style="border: none;">Navchetna</a>
 						</h3>
 
 					</div>
 
 				<div class = "six columns right">
-					Technology Club of MIS
+					Annual School Magazine
 				</div>
 			</div>
 		</div>
@@ -43,13 +43,39 @@
 		<div class="container">
 			<div class="twelve columns">
 
-				<img src="img/minetsite.png" style="width: 100%; height: auto">
+				<p>As the Head of Design Team of the school's Editorial Board, I was in-charge of collecting, editing, and designing the articles of the 400-paged annual school magazine.</p>
 
-				<p>Founded in 1999, MINET (MIS Information Network) is the official technology club of The Mother's International School.</p>
+				<p>Below are some of the pages I designed.</p><br />
+	
 
-				<p>As the President of this club, I am in charge of the club's main functionality – including participating in tech symposiums, making web applications, and organizing our annual event, MINET X. </p>
+				<div class="image-container">
 
-				<p>X is an exclusive invite-only event, and invites are extended to a select number of the very best schools in New Delhi, based on significant achievements in the previous years. Visit <a href="https://minet.co">minet.co</a> for more details.</p>
+					<p> Cover Page </p>
+					<img src="img/nav1.jpg" class="cover">
+
+				</div>
+
+
+				<div class="image-container">
+					<p> Jauhar Cup, Annual Football Event </p>
+					<img src="img/jauhar.png" class="portfolio">
+
+				</div>
+
+				<div class="image-container">
+
+					<p> School's Annual Day </p>
+					<img src="img/annualday.png" class="portfolio">
+
+				</div>
+
+				<div class="image-container">
+
+					<p> School's Talent Fiesta </p>
+					<img src="img/talentfiesta.png" class="portfolio">
+
+				</div>
+
 			</div>
 		</div>
 
