--- a/tgc.html
+++ b/tgc.html
@@ -38,11 +38,14 @@
 		</div>
 	</header>
 
-	<section id="stuff" style="margin-top: 15vh">
+	<section id="stuff" style="margin-top: 8vh">
 		
 		<div class="container">
 			<div class="twelve columns">
+
 				<p>At The Girl Code, we aim to inspire young girls with the confidence that they can code. By teaching them Python through fun and interactive media, and exposing them to a community of like minded young girls, our platform will help give rise to female programmers set to take the IT world by storm.</p>
+
+				<img src="img/tgc.png" style="width: 100%; height: auto">
 
 				<p>From January 2017, The Girl Code has organized several successful workshops at
 
