--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/assets.css">
 	<link rel="stylesheet" type="text/css" href="css/skills.css">
 	<link rel="stylesheet" href="https://use.typekit.net/rhk1yek.css">
-	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+	<link rel="stylesheet" type="text/css" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 	<script src="scripts.js"></script>
 	<link rel="icon" type="image/png" href="img/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
