--- a/aquarelle.html
+++ b/aquarelle.html
@@ -44,7 +44,7 @@
 
 			<p>In October 2018, I directed, shot, and edited a short film on Sustainable Development Goals. The motivation was to highlight the urgency of water conservation.</p>
 
-			<p>The movie is live on YouTube: <a href="http://tiny.cc/aquarelle">Aquarelle</a>.</p>
+			<p>The movie is live on YouTube: <a href="https://www.youtube.com/watch?v=ThhEMMvAjVE">Aquarelle</a>.</p>
 
 			<p>Aquarelle won the <b>First Position</b> in the International Movie-Making Fest at Mayo College, Ajmer, India. Schools from 27 different countries participated in said event.</p>
 
