--- a/aquarelle.html
+++ b/aquarelle.html
@@ -46,7 +46,7 @@
 
 			<p>The movie is live on YouTube: <a href="https://www.youtube.com/watch?v=ThhEMMvAjVE">Aquarelle</a>.</p>
 
-			<p>Aquarelle won the <b>First Position</b> in the International Movie-Making Fest at Mayo College, Ajmer, India. Schools from 27 different countries participated in said event.</p>
+			<p>Aquarelle won the <b>First Position</b> in the International Movie-Making Fest at Mayo College, Ajmer, India. Schools from multiple countries participated in said event.</p>
 
 			<div class="twelve columns">
 				<iframe width="" height="" src="https://www.youtube.com/embed/ThhEMMvAjVE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
