--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 				    <a class="blog-link type-image-2-1 row1 col1 first" href="solarpanel.html">
 				      <div class="article-image solar" background-color: #eee; "></div>
 				      <h3>Solar Panel Research</h3>
-				      <p>Research for Municipal Corporation of Delhi</p>
+				      <p>Research for The Mother's International School</p>
 				      <div class="portfolio-tags">
 				      	<span>Research, Environment</span>
 				      </div>
