--- a/solarpanel.html
+++ b/solarpanel.html
@@ -32,7 +32,7 @@
 					</div>
 
 				<div class = "six columns right">
-					Research for MCD
+					Research for MIS
 				</div>
 			</div>
 		</div>
