--- a/navchetna.html
+++ b/navchetna.html
@@ -43,7 +43,7 @@
 		<div class="container">
 			<div class="twelve columns">
 
-				<p>As the Head of Design Team of the school's Editorial Board, I was in-charge of collecting, editing, and designing the articles of the 400-paged annual school magazine.</p>
+				<p>As a part of the school's Editorial Board, I was in-charge of collecting, editing, and designing the articles of the 400-paged annual school magazine.</p>
 
 				<p>Below are some of the pages I designed.</p><br />
 	
