--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			</section>
 
 			<section id="footer" class="grey">
-				<p>Made with <i class="ion-heart" style="color: #F14E23"></i> in India.</p>
+				<p>Made with <i class="ion-heart" style="color: #F14E23"></i> by Anish Bajaj.</p>
 			</section>
 		</div>
 	
