new tab for every project

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 				</div>
 				
 				<div class="section" id="blog-links">
-				    <a class="blog-link type-image-2-1 row1 col1 first" href="aquarelle.html">
+				    <a class="blog-link type-image-2-1 row1 col1 first" href="aquarelle.html" target="_blank">
 				      <div class="article-image aquarelle" background-color: #eee; "></div>
 				      <h3>Aquarelle</h3>
 				      <p>International Award-Winning Short Film</p>
@@ -179,7 +179,7 @@
 				      </div>
 				    </a>
 
-					<a class="blog-link type-image-2-1 row1 col1" href="tgc.html" id="third">
+					<a class="blog-link type-image-2-1 row1 col1" href="tgc.html" id="third" target="_blank">
 				      <div class="article-image tgc" background-color: #eee; "></div>
 				      <h3>The Girl Code</h3>
 				      <p>Empowering Women through Programming</p>
@@ -188,7 +188,7 @@
 				      </div>
 				    </a>
 
-				    <a class="blog-link type-image-2-1 row1 col1" href="minet.html" id="fourth">
+				    <a class="blog-link type-image-2-1 row1 col1" href="minet.html" id="fourth" target="_blank">
 				      <div class="article-image minet" background-color: #eee; "></div>
 				      <h3>MINET</h3>
 				      <p>Technology Club of The Mother's International School</p>
@@ -197,7 +197,7 @@
 				      </div>
 				    </a>
 
-				    <a class="blog-link type-image-2-1 row1 col1" href="atherm.html" id="second">
+				    <a class="blog-link type-image-2-1 row1 col1" href="atherm.html" id="second" target="_blank">
 				      <div class="article-image a-therm" background-color: black"></div>
 				      <h3>A-Therm</h3>
 				      <p>Automatic Thermostat to reduce electricity consumption</p>
@@ -206,7 +206,7 @@
 				      </div>
 				    </a>
 
-				    <a class="blog-link type-image-2-1 row1 col1 first" href="shutai.html">
+				    <a class="blog-link type-image-2-1 row1 col1 first" href="shutai.html" target="_blank">
 				      <div class="article-image shutai" background-color: #eee; "></div>
 				      <h3>Shut.AI</h3>
 				      <p>An app to help you sleep better using music and AI</p>
@@ -215,7 +215,7 @@
 				      </div>
 				    </a>
 
-				    <a class="blog-link type-image-2-1 row1 col1 first" href="safai.html" id="first">
+				    <a class="blog-link type-image-2-1 row1 col1 first" href="safai.html" id="first" target="_blank">
 				      <div class="article-image safai" background-color: #eee; "></div>
 				      <h3>Saf.AI</h3>
 				      <p>AI-driven peer-to-peer solution to encourage cleanliness</p>
@@ -224,7 +224,7 @@
 				      </div>
 				    </a>
 
-				    <a class="blog-link type-image-2-1 row1 col1" href="ldc.html" id="fifth">
+				    <a class="blog-link type-image-2-1 row1 col1" href="ldc.html" id="fifth" target="_blank">
 				      <div class="article-image ldc" background-color: #eee; "></div>
 				      <h3>Le Dernier Chapitre</h3>
 				      <p>International award-winning French shortfilm</p>
@@ -234,7 +234,7 @@
 				    </a>
 
 
-				    <a class="blog-link type-image-2-1 row1 col1 first" href="solarpanel.html">
+				    <a class="blog-link type-image-2-1 row1 col1 first" href="solarpanel.html" target="_blank">
 				      <div class="article-image solar" background-color: #eee; "></div>
 				      <h3>Solar Panel Research</h3>
 				      <p>Research for The Mother's International School</p>
@@ -243,7 +243,7 @@
 				      </div>
 				    </a>
 					
-					<a class="blog-link type-image-2-1 row1 col1" href="impulse.html" id="third">
+					<a class="blog-link type-image-2-1 row1 col1" href="impulse.html" id="third" target="_blank">
 				      <div class="article-image impulse" background-color: #eee; "></div>
 				      <h3>Enigma</h3>
 				      <p>NodeJS-based Online Physics Hunt</p>
@@ -252,7 +252,7 @@
 				      </div>
 				    </a>
 
-					<a class="blog-link type-image-2-1 row1 col1" href="navchetna.html" id="third">
+					<a class="blog-link type-image-2-1 row1 col1" href="navchetna.html" id="third" target="_blank">
 				      <div class="article-image navchetna" background-color: #eee; "></div>
 				      <h3>Navchetna</h3>
 				      <p>400-paged annual school magazine</p>
