--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 			    }
 			  });
 
-			    var sentences = ["Hello. I'm Anish.", "Bonjour. Je m'appelle Anish.", "नमस्ते। मैं अनीश हूं।", "Hola. Me llamo Anish.", "This text will change." ];
+			    var sentences = ["Hello. I'm Anish.", "Bonjour. Je m'appelle Anish.", "नमस्ते। मैं अनीश हूं।", "This text will change." ];
 				var counter = 1;
 				var ticker = $("p.ticker");
 				function changeText() {
