--- a/atherm.html
+++ b/atherm.html
@@ -45,11 +45,11 @@
 				<img src="img/athermmodel.png">
 			</div>
 			<div class="six columns">
-				<p>I created A-Therm during my Summer Internship at Siemens PLM Software, Gurugram, India.</p>
+				<p>I created A-Therm (Automatic Thermostat) during my 6-week internship at Siemens PLM Software, Gurugram, India.</p>
 
-				<p>The device uses its AI network to determine a suitable temperature for your AC thermostat. All you have to do is install A-Therm in the system, and the AI will handle the rest for you, saving at least 20% on electricity bills.</p>
+				<p>The device uses machine learning to determine the <i>optimum</i> temperature for an AC thermostat, reducing energy consumption by up to 30%.</p>
 
-				<p>For a detailed project report verified by Siemens Inc., <a href="pdf/atherm.pdf" target="blank">click here.</p>
+				<p>A-Therm was subsequently pitched to venture capital investors at Siemens for further development, followed by its installation in the air-cooling system of the same branch.</p>
 			</div>
 		</div>
 
