--- a/atherm.html
+++ b/atherm.html
@@ -50,6 +50,7 @@
 				<p>The device uses machine learning to determine the <i>optimum</i> temperature for an AC thermostat, reducing energy consumption by up to 30%.</p>
 
 				<p>A-Therm was subsequently pitched to venture capital investors at Siemens for further development, followed by its installation in the air-cooling system of the same branch.</p>
+				<p>View the report <a href="https://anishbajaj.com/atherm.pdf">here</a>.</p>
 			</div>
 		</div>
 
