--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							
 							<p class="ticker"></p>
 
-							<p>I'm a 17-year-old high school student at The Mother's International School, New Delhi. Vastly captivated by the technology around myself, I like to <span style="font-style: italic">make</span> things. I am the President of my school's technology club, <a href="https://minet.co" style="font-weight:500;">MINET</a>. I'm an incoming freshman at Stanford University for Computer Science.</p><br />
+							<p>I'm a 17-year-old high school student at The Mother's International School, New Delhi. Vastly captivated by the technology around myself, I like to <span style="font-style: italic">make</span> things. I'm an incoming freshman at Stanford University for Computer Science.</p><br />
 
 
 						</div>
