added java to skills

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							
 							<p class="ticker"></p>
 
-							<p>I'm a 17-year-old high school student at The Mother's International School, New Delhi. Vastly captivated by the technology around myself, I like to <span style="font-style: italic">make</span> things. I'm an incoming freshman at University of California, Berkeley for Computer Science.</p><br />
+							<p>I'm a 17-year-old high school student at The Mother's International School, New Delhi. Vastly captivated by the technology around myself, I like to <span style="font-style: italic">make</span> things. I'm an incoming freshman at the University of California, Berkeley for Computer Science.</p><br />
 
 
 						</div>
@@ -117,6 +117,13 @@
 						<div class="SkillBar">
 							<div id="Skill-C">
 							  <span class="Skill-Area ">C++</span>
+							  <span class="PercentText "></span>
+							</div>
+						</div>
+
+						<div class="SkillBar">
+							<div id="Skill-Java">
+							  <span class="Skill-Area ">Java</span>
 							  <span class="PercentText "></span>
 							</div>
 						</div>
