--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							
 							<p class="ticker"></p>
 
-							<p>I'm a 17-year-old high school student at The Mother's International School, New Delhi. Vastly captivated by the technology around myself, I like to <span style="font-style: italic">make</span> things. I'm an incoming freshman at the University of California, Berkeley for Computer Science.</p><br />
+							<p>I'm currently a freshman at University of California, Berkeley. Apart from being a full-time student, I'm a proficient programmer and web developer. Deeply passionate about Computer Science, I adore discovering and learning new concepts in my field, especially via projects and coursework.</p><br />
 
 
 						</div>
@@ -137,7 +137,7 @@
 
 						<div class="SkillBar">
 							<div id="Skill-Csharp">
-							  <span class="Skill-Area ">C#</span>
+							  <span class="Skill-Area ">Swift</span>
 							  <span class="PercentText "></span>
 							</div>
 						</div>
@@ -151,7 +151,7 @@
 						  
 						<div class="SkillBar">
 							<div id="Skill-CSS">
-							  <span class="Skill-Area ">CSS/CSS3</span>
+							  <span class="Skill-Area ">CSS/CSS3/SCSS</span>
 							  <span class="PercentText "></span>
 							</div>
 						</div>  
