--- a/index.html
+++ b/index.html
@@ -132,24 +132,26 @@
 
 					<h2 class="subhead">Languages</h2>
 					<div class="row">
-
 						<div class="three columns">
-							Swift
+							Java
 						</div>
 						<div class="three columns">
 							Python
 						</div>
 						<div class="three columns">
-							Java
+							Swift
 						</div>
 						<div class="three columns">
 							C++
 						</div>
 						<div class="three columns">
-							Objective-C
+							MySQL
 						</div>
 						<div class="three columns">
-							MySQL
+							SQLite
+						</div>
+						<div class="three columns">
+							Scheme
 						</div>
 						<div class="three columns">
 							HTML
@@ -324,11 +326,12 @@
 					<div class="row">
 						<div class="twelve columns">
 							<h2 class="subhead">Contact</h2>
-							<p>The best way to reach me is to email me at <a href="mailto:anishbajaj01@gmail.com">mail@anishbajaj.com</a>. I try to respond within 8-10 hours of receiving a message. Alternatively, you could connect with me on social media: I maintain a profile on <a href="https://www.instagram.com/theanishbajaj/">Instagram</a> and <a href="https://www.facebook.com/anishbajaj01">Facebook</a>.</p>
+							<p>The best way to reach me is to email me at <a href="mailto:anishbajaj@berkeley.edu">anishbajaj@berkeley.edu</a>. I try to respond within 8-10 hours of receiving a message. Alternatively, you could connect with me on social media: I maintain a profile on <a href="https://www.instagram.com/theanishbajaj/">Instagram</a> and <a href="https://www.facebook.com/anishbajaj01">Facebook</a>.</p>
 							<ul class="social">
-								<li><a href="http://facebook.com/anishbajaj01"><i class="ion-social-facebook"></i>anishbajaj01</a></li>
-								<li><a href="http://github.com/anishbajaj2001"><i class="ion-social-github"></i>anishbajaj2001</a></li>
-								<li><a href="mailto:anishbajaj01@gmail.com"><i class="ion-ios-email"></i>mail@anishbajaj.com</a></li>
+								<li><a href="https://facebook.com/anishbajaj01"><i class="ion-social-facebook"></i>Facebook</a></li>
+								<li><a href="https://github.com/anishbajaj2001"><i class="ion-social-github"></i>Github</a></li>
+								<li><a href="mailto:anishbajaj@berkeley.edu"><i class="ion-ios-email"></i>Email</a></li>
+								<li><a href="https://linkedin.com/in/anishbajaj01"><i class="ion-social-linkedin"></i>LinkedIn</a></li>
 							</ul>
 						</div>
 					</div>
