--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						</div>
 						<div class="row links">
 							<div class="four columns">
-								<a href="temp.html">Resume <i class="fas">&#xf105;</i></a>
+								<a href="pdf/AnishBajaj_Resume1.pdf">Resume <i class="fas">&#xf105;</i></a>
 							</div>
 							<div class="four columns">
 								<a href="#work" class="scroll">Projects <i class="fas">&#xf105;</i></a>
